[workspace]
resolver = "2"

members = [
    "rust/helloworld",
    "rust/memtest",
    "rust/exception",
    "rust/display",
    "rust/fs/shell",
    "rust/net/echoserver",
    "rust/net/httpclient",
    "rust/net/httpserver",
    "rust/net/udpserver",
    "rust/net/bwbench",
    "rust/task/parallel",
    "rust/task/sleep",
    "rust/task/yield",
    "rust/task/priority",
    "rust/task/tls",
    "rust/task/irq",
    "rust/task/affinity",
    "rust/task/wait_queue",
]
exclude = ["arceos"]

[workspace.dependencies]
axstd = { path = "arceos/ulib/axstd" }

[patch.crates-io]
axbacktrace = { git = "https://github.com/Starry-OS/axbacktrace.git" }
axcpu = { git = "https://github.com/Starry-OS/axcpu.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axplat-loongarch64-qemu-virt = { git = "https://github.com/Starry-OS/axplat_crates.git", branch = "feat/la64-dmw" }
